--- a/src/App.css
+++ b/src/App.css
@@ -394,6 +394,7 @@ textarea {
 }
 
 .fl-signup-card {
+	margin-bottom: 30px;
 	width: 400px;
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 	border: #fff;
@@ -414,6 +415,7 @@ textarea {
 
 /***************************************************************FOOTER***************************************************************/
 .footer {
+	position: fixed;
 	background-color: #092328;
 	color: white;
 	padding: 15px;
